setting up integration tests
